Bug 1167465 - Exposing Allowed Audio Channels in System App's Window, r=alwu, r=fabrice