dom/html/nsBrowserElement.h
@@ -117,6 +117,15 @@ public:
   void SetNFCFocus(bool isFocus,
                    ErrorResult& aRv);
 
+  // Helper
+  static void GenerateAllowedAudioChannels(
+                 nsPIDOMWindow* aWindow,
+                 nsIFrameLoader* aFrameLoader,
+                 nsIBrowserElementAPI* aAPI,
+                 const nsAString& aManifestURL,
+                 nsTArray<nsRefPtr<dom::BrowserElementAudioChannel>>& aAudioChannels,
+                 ErrorResult& aRv);
+
 protected:
   NS_IMETHOD_(already_AddRefed<nsFrameLoader>) GetFrameLoader() = 0;
   void InitBrowserElementAPI();
